--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
     <head>
         <title>Login</title>
         <script type="text/javascript">
+            function Login() {
             let user = document.getElementById("user").value;
             let pass = document.getElementById("pass").value;
 
             if(user == "Nicoly" && pass == "0704"){
                 alert("Bem vinda " + user);
             }
+        }
         </script>
     </head>
     <body>
